@@ -32,6 +32,7 @@ ChangeLog
 [+] * All callbacks can now pass user data along.
 [+] * SMSD can now write PID file.
 [+] * Added man pages for gammu-smsd(1), gammu-smsdrc(5) and gammurc(5).
+[+] * SMSD can now natively run as a Windows service (bug #451).
     
 20081219 - 1.22.1
 
